# text-gauntlet

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml
TG/: NLP.ipynb  Oblivion.json  login.py  main.py  tempCodeRunnerFile.py
assets/themes/: oblivion.json
src/: __init__.py  main.py
src/config/: __init__.py  settings.py  themes.py
src/core/: __init__.py  models.py  sentiment_analyzer.py  text_processor.py
src/services/: __init__.py  analytics_service.py  api_manager.py  application_services.py  article_service.py  data_service.py  export_service.py  lyrics_service.py  movie_service.py
src/ui/: __init__.py  main_window.py
src/ui/components/: __init__.py  base.py  navigation.py  theme_manager.py
src/ui/pages/: __init__.py  articles_page.py  history_page.py  lyrics_page.py  movies_page.py  settings_page.py  text_page.py
src/utils/: __init__.py  exceptions.py  helpers.py  logger.py  validators.py
